Made basic function that plays 5 rounds. Text no longer overflows from display.

--- a/rock-paper-scissors.css
+++ b/rock-paper-scissors.css
@@ -29,10 +29,12 @@ background-color: black;
 }
 
 #div {
+  display: inline-block;
     margin: 0;
     position: absolute;
     top: 50%;
     left: 50%;
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
+    color: white;
 }
